Fix quotes and spacing

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -4,9 +4,7 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
-@source inline(
-	'{bg,text}-{red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{100,200,950}'
-);
+@source inline("{hover:,}{bg,text}-{red,orange,amber,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,purple,fuchsia,pink,rose}-{100,200,950}");
 
 :root {
 	--radius: 0.625rem;
